pieter-fish/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pieter-fish-service
spec:
  selector:
    app: pieter-fish
  ports:
  - name: pieter-fish-http
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
