pieter-fish/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-wan-https-route
spec:
  parentRefs:
  - name: homelab-wan-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "pieter.fish" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pieter-fish-service
      port: 80
